WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
303977
[blocks-in-inline] imported/w3c/web-platform-tests/mathml/crashtests/mozilla/355986-1.xhtml hits assert
https://bugs.webkit.org/show_bug.cgi?id=303977
Summary
[blocks-in-inline] imported/w3c/web-platform-tests/mathml/crashtests/mozilla/...
Antti Koivisto
Reported
2025-12-10 23:31:01 PST
with the anon box removed
Attachments
[fast-cq]Patch
(1.76 KB, patch)
2025-12-11 19:09 PST
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-12-10 23:31:13 PST
<
rdar://problem/166280439
>
Antti Koivisto
Comment 2
2025-12-10 23:42:44 PST
Pull request:
https://github.com/WebKit/WebKit/pull/55232
EWS
Comment 3
2025-12-11 00:41:05 PST
Committed
304282@main
(995035dec802): <
https://commits.webkit.org/304282@main
> Reviewed commits have been landed. Closing PR #55232 and removing active labels.
WebKit Commit Bot
Comment 4
2025-12-11 18:06:26 PST
Re-opened since this is blocked by
bug 304045
alan
Comment 5
2025-12-11 19:09:58 PST
Created
attachment 477702
[details]
[fast-cq]Patch
EWS
Comment 6
2025-12-11 21:00:16 PST
Committed
304339@main
(5f164d53e1d2): <
https://commits.webkit.org/304339@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 477702
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug