[blocks-in-inline] imported/w3c/web-platform-tests/mathml/crashtests/mozilla/355986-1.xhtml hits assert https://bugs.webkit.org/show_bug.cgi?id=303977 rdar://166280439

Reviewed by Alan Baradlay.

* Source/WebCore/layout/integration/LayoutIntegrationBoxTreeUpdater.cpp:
(WebCore::LayoutIntegration::BoxTreeUpdater::adjustStyleIfNeeded):

Adjust RenderMathMLMath in IFC to not have internal table display type.

Canonical link: https://commits.webkit.org/304282@main